--- a/TerraformOnGCP/GKE/monitoring/prometheus-configmap.yml
+++ b/TerraformOnGCP/GKE/monitoring/prometheus-configmap.yml
@@ -70,11 +70,11 @@ data:
 
       - job_name: 'kube-state-metrics'
         static_configs:
-          - targets: ['kube-state-metrics.kube-system.svc.cluster.local:8080'] # Correct namespace
+          - targets: ['kube-state-metrics.kubesystem.svc.cluster.local:8080']
 
       - job_name: 'nginx'
         static_configs:
-          - targets: ['nginx-lb.default.svc.cluster.local:80']  # Correct service name and namespace
+          - targets: ['nginx-lb.default.svc.cluster.local:80']
 
       # Example: Scraping Argo CD metrics (if exposed) - uncomment if needed
       - job_name: 'argocd-server'
