--- a/TerraformOnGCP/GKE/monitoring/grafana-svc.yml
+++ b/TerraformOnGCP/GKE/monitoring/grafana-svc.yml
@@ -4,19 +4,16 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app.kubernetes.io/component: grafana
-    app.kubernetes.io/name: grafana
-    app.kubernetes.io/part-of: kube-prometheus
+    app: grafana
+    component: core
     app.kubernetes.io/version: 10.4.1
-  name: grafana
+  name: grafana-lb
   namespace: monitoring
 spec:
   type: LoadBalancer # This line tells Kubernetes to create a Service of type LoadBalancer. GKE will automatically provision a Google Cloud Load Balancer and assign it an external IP address.
   ports:
   - name: http # A name for the port
-    port: 3000 # This is the external port that the Service will listen on. 3000 is the default Grafana port
+    port: 80 # external (LB port)
     targetPort: 3000 # This refers to the port inside the Grafana container. http is likely defined as port 3000 in container.
   selector:
-    app.kubernetes.io/component: grafana
-    app.kubernetes.io/name: grafana
-    app.kubernetes.io/part-of: kube-prometheus
+    app: grafana
