--- a/TerraformOnGCP/GKE/monitoring/nodeexporter-svc.yml
+++ b/TerraformOnGCP/GKE/monitoring/nodeexporter-svc.yml
@@ -1,20 +1,20 @@
-# apiVersion: v1
-# kind: Service
-# metadata:
-#   labels:
-#     app.kubernetes.io/component: exporter
-#     app.kubernetes.io/name: node-exporter
-#     app.kubernetes.io/part-of: kube-prometheus
-#     app.kubernetes.io/version: 1.9.0
-#   name: node-exporter
-#   namespace: monitoring
-# spec:
-#   clusterIP: None
-#   ports:
-#   - name: https
-#     port: 9100
-#     targetPort: https
-#   selector:
-#     app.kubernetes.io/component: exporter
-#     app.kubernetes.io/name: node-exporter
-#     app.kubernetes.io/part-of: kube-prometheus
+apiVersion: v1
+kind: Service
+metadata:
+  labels:
+    app.kubernetes.io/component: exporter
+    app.kubernetes.io/name: node-exporter
+    app.kubernetes.io/part-of: kube-prometheus
+    app.kubernetes.io/version: 1.9.0
+  name: node-exporter
+  namespace: monitoring
+spec:
+  clusterIP: None
+  ports:
+  - name: http
+    port: 9100
+    targetPort: http
+  selector:
+    app.kubernetes.io/component: exporter
+    app.kubernetes.io/name: node-exporter
+    app.kubernetes.io/part-of: kube-prometheus
