--- a/TerraformOnGCP/GKE/monitoring/prometheus-configmap.yml
+++ b/TerraformOnGCP/GKE/monitoring/prometheus-configmap.yml
@@ -1,33 +1,205 @@
-# ---  Kube State Metrics (via RBAC Proxy) ---
-      - job_name: 'kube-state-metrics'
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: prometheus-config
+  namespace: monitoring
+data:
+  prometheus.yml: |
+    global:
+      scrape_interval: 15s
+      evaluation_interval: 15s
+
+    scrape_configs:
+      # --- Node Exporter (HTTP) ---
+      # Discovers node-exporter pods in 'monitoring' namespace via HTTP
+      - job_name: 'node-exporter'
         kubernetes_sd_configs:
-          # Discover endpoints of the service in kube-system namespace
-          - role: endpoints
-            namespaces:
-              names: [kube-system]
-        # Scrape the RBAC proxy using HTTPS
-        scheme: https
-        # Add TLS config - use CA file or insecure for testing
-        tls_config:
-          ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
-          # Or for testing only:
-          insecure_skip_verify: true
-          # Authenticate using Prometheus's service account token
-        bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
+          - role: pod
+            namespaces: [monitoring] # Adjust namespace if needed
+        scheme: http
         relabel_configs:
-          # Keep only endpoints associated with the 'kube-state-metrics' service
-          # (Matches based on the service's 'app.kubernetes.io/name' label)
-          - source_labels: [__meta_kubernetes_service_label_app_kubernetes_io_name]
+          - source_labels: [__meta_kubernetes_pod_label_app_kubernetes_io_name]
             action: keep
-            regex: kube-state-metrics
-          # Keep only the endpoint port named 'https-main' (which is 8443)
-          - source_labels: [__meta_kubernetes_endpoint_port_name]
+            regex: node-exporter
+          - source_labels: [__meta_kubernetes_pod_container_port_name]
             action: keep
-            regex: https-main
-          # Optional: Map labels from the pod/service onto the metrics 
+            regex: http # Matches port name in DS/SVC
+          - source_labels: [__meta_kubernetes_pod_ip, __meta_kubernetes_pod_container_port_number]
+            regex: (.+);(.+)
+            target_label: __address__
+            replacement: ${1}:${2}
+            action: replace
+          - source_labels: [__meta_kubernetes_pod_node_name]
+            target_label: instance
+            action: replace
+
+      # --- Nginx Exporter ---
+      # Discovers nginx-prometheus-exporter sidecars
+      # ASSUMPTIONS: Exporter runs in 'default' ns, pods labeled 'app=nginx', exporter on port 9113 (HTTP)
+      # !!! ADJUST namespace, labels, port regex IF YOUR SETUP DIFFERS !!!
+      - job_name: 'nginx'
+        kubernetes_sd_configs:
+          - role: pod
+            namespaces: [default]
+        scheme: http
+        relabel_configs:
+          - source_labels: [__meta_kubernetes_pod_label_app]
+            action: keep
+            regex: nginx
+          - source_labels: [__meta_kubernetes_pod_container_port_number]
+            action: keep
+            regex: 9113 # Assumed exporter port
+          - source_labels: [__meta_kubernetes_pod_ip]
+            regex: (.+)
+            target_label: __address__
+            replacement: ${1}:9113 # Use PodIP:ExporterPort
+            action: replace
           - action: labelmap
             regex: __meta_kubernetes_pod_label_(.+)
           - source_labels: [__meta_kubernetes_namespace]
             target_label: namespace
+          - source_labels: [__meta_kubernetes_pod_name]
+            target_label: pod_name
+
+      # --- Kubernetes API Servers ---
+      - job_name: 'kubernetes-apiservers'
+        kubernetes_sd_configs:
+          - role: endpoints
+        scheme: https
+        tls_config:
+          ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
+          # insecure_skip_verify: true # Removed - CA file allows verification
+        bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
+        relabel_configs:
+          - source_labels: [__meta_kubernetes_namespace, __meta_kubernetes_service_name, __meta_kubernetes_endpoint_port_name]
+            action: keep
+            regex: default;kubernetes;https
+
+      # --- Kubernetes Nodes (cAdvisor via API Proxy) ---
+      - job_name: 'kubernetes-nodes-cadvisor'
+        kubernetes_sd_configs:
+          - role: node
+        scheme: https
+        tls_config:
+          ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
+          # insecure_skip_verify: true # Removed - CA file allows verification
+        bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
+        relabel_configs:
+          - action: labelmap
+            regex: __meta_kubernetes_node_label_(.+)
+          - target_label: __address__
+            replacement: kubernetes.default.svc.cluster.local:443
+          - source_labels: [__meta_kubernetes_node_name]
+            regex: (.+)
+            target_label: __metrics_path__
+            replacement: /api/v1/nodes/${1}/proxy/metrics/cadvisor
+
+      # --- Kubernetes Pods (Annotation-based discovery) ---
+      # Scrapes any pod with 'prometheus.io/scrape: true' annotation
+      - job_name: 'kubernetes-pods'
+        kubernetes_sd_configs:
+          - role: pod
+        relabel_configs:
+          - source_labels: [__meta_kubernetes_pod_annotation_prometheus_io_scrape]
+            action: keep
+            regex: true
+          - source_labels: [__meta_kubernetes_pod_annotation_prometheus_io_path]
+            action: replace
+            target_label: __metrics_path__
+            regex: (.+)
+          - source_labels: [__address__, __meta_kubernetes_pod_annotation_prometheus_io_port]
+            action: replace
+            regex: ([^:]+)(?::\d+)?;(\d+)
+            replacement: $1:$2
+            target_label: __address__
+          - action: labelmap
+            regex: __meta_kubernetes_pod_label_(.+)
+          - source_labels: [__meta_kubernetes_namespace]
+            action: replace
+            target_label: kubernetes_namespace
+          - source_labels: [__meta_kubernetes_pod_name]
+            action: replace
+            target_label: kubernetes_pod_name
+
+      # --- Kube State Metrics (via RBAC Proxy) ---
+      # Discovers kube-state-metrics endpoints in 'kube-system' via HTTPS proxy
+      - job_name: 'kube-state-metrics'
+        kubernetes_sd_configs:
+          - role: endpoints
+            namespaces: [kube-system]
+        scheme: https
+        tls_config:
+          ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
+          # insecure_skip_verify: true # Removed - CA file allows verification
+        bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
+        relabel_configs:
+          - source_labels: [__meta_kubernetes_service_label_app_kubernetes_io_name]
+            action: keep
+            regex: kube-state-metrics
+          - source_labels: [__meta_kubernetes_endpoint_port_name]
+            action: keep
+            regex: https-main # Port 8443 exposed by proxy
+          - action: labelmap
+            regex: __meta_kubernetes_pod_label_(.+) # Use pod labels if available via endpoint role
+          - source_labels: [__meta_kubernetes_namespace]
+            target_label: namespace
           - source_labels: [__meta_kubernetes_service_name]
             target_label: service
+
+      # --- Argo CD Metrics ---
+      # ASSUMPTIONS: Argo runs in 'argocd' ns, uses standard labels, metrics on HTTP /metrics
+      # Ports: Server=8083, Repo=8081, Controller=8082
+      # !!! ADJUST namespace, labels, ports IF YOUR SETUP DIFFERS !!!
+      - job_name: 'argocd-server-metrics'
+        kubernetes_sd_configs:
+          - role: pod
+            namespaces: [argocd]
+        relabel_configs:
+          - source_labels: [__meta_kubernetes_pod_label_app_kubernetes_io_name]
+            action: keep
+            regex: argocd-server
+          - source_labels: [__meta_kubernetes_pod_container_port_number]
+            action: keep
+            regex: 8083 # Assumed metrics port
+          - source_labels: [__meta_kubernetes_pod_ip, __meta_kubernetes_pod_container_port_number]
+            action: replace; regex: (.+);(.+); target_label: __address__; replacement: ${1}:${2}
+          - action: labelmap
+            regex: __meta_kubernetes_pod_label_(.+)
+          - source_labels: [__meta_kubernetes_namespace]; target_label: namespace
+          - source_labels: [__meta_kubernetes_pod_name]; target_label: pod_name
+
+      - job_name: 'argocd-repo-server-metrics'
+        kubernetes_sd_configs:
+          - role: pod
+            namespaces: [argocd]
+        relabel_configs:
+          - source_labels: [__meta_kubernetes_pod_label_app_kubernetes_io_name]
+            action: keep
+            regex: argocd-repo-server
+          - source_labels: [__meta_kubernetes_pod_container_port_number]
+            action: keep
+            regex: 8081 # Assumed metrics port
+          - source_labels: [__meta_kubernetes_pod_ip, __meta_kubernetes_pod_container_port_number]
+            action: replace; regex: (.+);(.+); target_label: __address__; replacement: ${1}:${2}
+          - action: labelmap
+            regex: __meta_kubernetes_pod_label_(.+)
+          - source_labels: [__meta_kubernetes_namespace]; target_label: namespace
+          - source_labels: [__meta_kubernetes_pod_name]; target_label: pod_name
+
+      - job_name: 'argocd-application-controller-metrics'
+        kubernetes_sd_configs:
+          - role: pod
+            namespaces: [argocd]
+        relabel_configs:
+          - source_labels: [__meta_kubernetes_pod_label_app_kubernetes_io_name]
+            action: keep
+            regex: argocd-application-controller
+          - source_labels: [__meta_kubernetes_pod_container_port_number]
+            action: keep
+            regex: 8082 # Assumed metrics port
+          - source_labels: [__meta_kubernetes_pod_ip, __meta_kubernetes_pod_container_port_number]
+            action: replace; regex: (.+);(.+); target_label: __address__; replacement: ${1}:${2}
+          - action: labelmap
+            regex: __meta_kubernetes_pod_label_(.+)
+          - source_labels: [__meta_kubernetes_namespace]; target_label: namespace
+          - source_labels: [__meta_kubernetes_pod_name]; target_label: pod_name
