--- a/TerraformOnGCP/GKE/ansible/playbooks/install-argocd-with-helm.yml
+++ b/TerraformOnGCP/GKE/ansible/playbooks/install-argocd-with-helm.yml
@@ -17,10 +17,10 @@
       name: argocd
       chart_ref: argo/argo-cd
       release_namespace: argocd
-      create_namespace: false # we already have this ns created via another step in.
+      create_namespace: false 
       wait: true
       wait_timeout: 300s
-      chart_version: "5.16.0"  # Use a recent, stable version. Check for latest: https://artifacthub.io/packages/helm/argo/argo-cd
+      chart_version: "5.16.0"
       values:
         server:
           container:
