--- a/.github/workflows/install-argocd-workflow.yml
+++ b/.github/workflows/install-argocd-workflow.yml
@@ -1,10 +1,10 @@
 name: Install Argo CD
 
 on:
-    workflow_run:
-      workflows: ["Create svc & Deploy nginx"]
-      types:
-        - completed
+    # workflow_run:
+    #   workflows: ["Create svc & Deploy nginx"]
+    #   types:
+    #     - completed
     workflow_dispatch:
 
 jobs:
