--- a/TerraformOnGCP/GKE/monitoring/prometheus-configmap-copy.yml
+++ b/TerraformOnGCP/GKE/monitoring/prometheus-configmap-copy.yml
@@ -68,9 +68,41 @@ data:
             action: replace
             target_label: kubernetes_pod_name
 
-      - job_name: 'kube-state-metrics'
-        static_configs:
-          - targets: ['kube-state-metrics.kube-system.svc.cluster.local:8080']
+      # - job_name: 'kube-state-metrics'
+      #   static_configs:
+      #     - targets: ['kube-state-metrics.kube-system.svc.cluster.local:8080']
+
+        - job_name: 'kube-state-metrics'
+          kubernetes_sd_configs:
+            # Discover endpoints of the service in kube-system namespace
+            - role: endpoints
+              namespaces:
+                names: [kube-system]
+          # Scrape the RBAC proxy using HTTPS
+          scheme: https
+          tls_config:
+            # ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
+            # Or for testing only:
+            insecure_skip_verify: true
+            # Authenticate using Prometheus's service account token
+          bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
+          relabel_configs:
+            # Keep only endpoints associated with the 'kube-state-metrics' service
+            # (Matches based on the service's 'app.kubernetes.io/name' label)
+            - source_labels: [__meta_kubernetes_service_label_app_kubernetes_io_name]
+              action: keep
+              regex: kube-state-metrics
+            # Keep only the endpoint port named 'https-main' (which is 8443)
+            - source_labels: [__meta_kubernetes_endpoint_port_name]
+              action: keep
+              regex: https-main
+            # Optional: Map labels from the pod/service onto the metrics 
+            - action: labelmap
+              regex: __meta_kubernetes_pod_label_(.+)
+            - source_labels: [__meta_kubernetes_namespace]
+              target_label: namespace
+            - source_labels: [__meta_kubernetes_service_name]
+              target_label: service
 
       - job_name: 'nginx'
         static_configs:
