--- a/TerraformOnGCP/GKE/monitoring/prometheus-configmap.yml
+++ b/TerraformOnGCP/GKE/monitoring/prometheus-configmap.yml
@@ -1,5 +1,3 @@
-# monitoring/prometheus-configmap.yml
-
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -16,8 +14,10 @@ data:
       # Discovers node-exporter pods in 'monitoring' namespace via HTTP
       - job_name: 'node-exporter'
         kubernetes_sd_configs:
-          - role: pod
-            namespaces: [monitoring]
+        - role: pod
+          namespaces:
+            names:
+              - monitoring
         scheme: http
         relabel_configs:
           - source_labels: [__meta_kubernetes_pod_label_app_kubernetes_io_name]
@@ -37,12 +37,12 @@ data:
 
       # --- Nginx Exporter ---
       # Discovers nginx-prometheus-exporter sidecars
-      # ASSUMPTIONS: Exporter runs in 'default' ns, pods labeled 'app=nginx', exporter on port 9113 (HTTP)
-      # !!! ADJUST namespace, labels, port regex IF YOUR SETUP DIFFERS !!!
       - job_name: 'nginx'
         kubernetes_sd_configs:
-          - role: pod
-            namespaces: [default]
+        - role: pod
+          namespaces:
+            names:
+              - default
         scheme: http
         relabel_configs:
           - source_labels: [__meta_kubernetes_pod_label_app]
@@ -66,11 +66,10 @@ data:
       # --- Kubernetes API Servers ---
       - job_name: 'kubernetes-apiservers'
         kubernetes_sd_configs:
-          - role: endpoints
+        - role: endpoints
         scheme: https
         tls_config:
           ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
-          # insecure_skip_verify: true # Removed - CA file allows verification
         bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
         relabel_configs:
           - source_labels: [__meta_kubernetes_namespace, __meta_kubernetes_service_name, __meta_kubernetes_endpoint_port_name]
@@ -80,11 +79,10 @@ data:
       # --- Kubernetes Nodes (cAdvisor via API Proxy) ---
       - job_name: 'kubernetes-nodes-cadvisor'
         kubernetes_sd_configs:
-          - role: node
+        - role: node
         scheme: https
         tls_config:
           ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
-          # insecure_skip_verify: true # Removed - CA file allows verification
         bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
         relabel_configs:
           - action: labelmap
@@ -100,7 +98,7 @@ data:
       # Scrapes any pod with 'prometheus.io/scrape: true' annotation
       - job_name: 'kubernetes-pods'
         kubernetes_sd_configs:
-          - role: pod
+        - role: pod
         relabel_configs:
           - source_labels: [__meta_kubernetes_pod_annotation_prometheus_io_scrape]
             action: keep
@@ -127,12 +125,13 @@ data:
       # Discovers kube-state-metrics endpoints in 'kube-system' via HTTPS proxy
       - job_name: 'kube-state-metrics'
         kubernetes_sd_configs:
-          - role: endpoints
-            namespaces: [kube-system]
+        - role: endpoints
+          namespaces:
+            names:
+              - kube-system
         scheme: https
         tls_config:
           ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
-          # insecure_skip_verify: true # Removed - CA file allows verification
         bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
         relabel_configs:
           - source_labels: [__meta_kubernetes_service_label_app_kubernetes_io_name]
@@ -150,12 +149,12 @@ data:
 
       # --- Argo CD Metrics ---
       # ASSUMPTIONS: Argo runs in 'argocd' ns, uses standard labels, metrics on HTTP /metrics
-      # Ports: Server=8083, Repo=8081, Controller=8082
-      # !!! ADJUST namespace, labels, ports IF YOUR SETUP DIFFERS !!!
       - job_name: 'argocd-server-metrics'
         kubernetes_sd_configs:
-          - role: pod
-            namespaces: [argocd]
+        - role: pod
+          namespaces:
+            names:
+              - argocd
         relabel_configs:
           - source_labels: [__meta_kubernetes_pod_label_app_kubernetes_io_name]
             action: keep
@@ -171,14 +170,16 @@ data:
           - action: labelmap
             regex: __meta_kubernetes_pod_label_(.+)
           - source_labels: [__meta_kubernetes_namespace]
-            target_label: namespace # Corrected Line
+            target_label: namespace
           - source_labels: [__meta_kubernetes_pod_name]
             target_label: pod_name
 
       - job_name: 'argocd-repo-server-metrics'
         kubernetes_sd_configs:
-          - role: pod
-            namespaces: [argocd]
+        - role: pod
+          namespaces:
+            names:
+              - argocd
         relabel_configs:
           - source_labels: [__meta_kubernetes_pod_label_app_kubernetes_io_name]
             action: keep
@@ -200,8 +201,10 @@ data:
 
       - job_name: 'argocd-application-controller-metrics'
         kubernetes_sd_configs:
-          - role: pod
-            namespaces: [argocd]
+        - role: pod
+          namespaces:
+            names:
+              - argocd
         relabel_configs:
           - source_labels: [__meta_kubernetes_pod_label_app_kubernetes_io_name]
             action: keep
