--- a/.github/workflows/app-deploy-workflow.yml
+++ b/.github/workflows/app-deploy-workflow.yml
@@ -1,10 +1,10 @@
 name: Create svc & Deploy nginx
 
 on:
-  # workflow_run:
-  #   workflows: ["Deploy GKE Cluster"]
-  #   types:
-  #     - completed
+  workflow_run:
+    workflows: ["Deploy GKE Cluster"]
+    types:
+      - completed
   workflow_dispatch:
 
 jobs:
@@ -40,7 +40,7 @@ jobs:
             gcloud config set project ${{ secrets.GCP_PROJECT_ID }}
             gcloud container clusters get-credentials gke-cluster --zone us-central1-f --project ${{ secrets.GCP_PROJECT_ID }}
         env:
-            GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GCP_SA_KEY }}
+            GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GCP_ACCESS_KEY }} #SA
 
       - name: Deploy Nginx
         run: kubectl apply -f k8s-configs/deployment.yml
