--- a/.github/workflows/install-prometheus-grafana.yml
+++ b/.github/workflows/install-prometheus-grafana.yml
@@ -41,7 +41,7 @@ jobs:
             gcloud config set project ${{ secrets.GCP_PROJECT_ID }}
             gcloud container clusters get-credentials gke-cluster --zone us-central1-f --project ${{ secrets.GCP_PROJECT_ID }}
         env:
-            GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GCP_SA_KEY }}
+            GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GCP_ACCESS_KEY }} #SA
 
       # --- Cleanup (Add these steps) ---
       - name: Delete Existing Prometheus Resources (if any)
@@ -81,21 +81,3 @@ jobs:
           kubectl apply -f monitoring/node-exporter-sa.yml
           kubectl apply -f monitoring/nodeexporter-daemonset.yml
           kubectl apply -f monitoring/nodeexporter-svc.yml
-
-      # - name: Verify Prometheus Installation
-      #   run: |
-      #     kubectl get pods -n monitoring -o wide
-      #     kubectl get svc -n monitoring
-      #     kubectl describe deployment -n monitoring prometheus-server
-      #     kubectl describe pod -n monitoring -l app=prometheus-server
-
-      # - name: Verify Kube State Metrics Installation
-      #   run: |
-      #     kubectl get pods -n kube-system -o wide
-      #     kubectl describe deployment -n kube-system kube-state-metrics
-
-      # - name: Verify Grafana Installation
-      #   run: |
-      #     kubectl get pods -n monitoring -o wide
-      #     kubectl get svc -n monitoring
-      #     kubectl describe deployment -n monitoring grafana
