--- a/.github/workflows/gke-deploy-workflow.yml
+++ b/.github/workflows/gke-deploy-workflow.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - "main"
     paths:
-      - 'TerraformOnGCP/GKE/**'
+      - 'TerraformOnGCP/k8s-argocd-monitoring-with-github-workflow/**'
   workflow_dispatch:
 
 jobs:
