--- a/.github/workflows/install-argocd-workflow.yml
+++ b/.github/workflows/install-argocd-workflow.yml
@@ -15,7 +15,7 @@ jobs:
       id-token: 'write'
     defaults:
       run:
-        working-directory: ./TerraformOnGCP/GKE
+        working-directory: ./TerraformOnGCP/k8s-argocd-monitoring-with-github-workflow
 
     steps:
       - name: Checkout code
