--- a/.github/workflows/gke-deploy-workflow.yml
+++ b/.github/workflows/gke-deploy-workflow.yml
@@ -18,7 +18,7 @@ jobs:
     defaults:
       run:
         shell: bash
-        working-directory: ./TerraformOnGCP/GKE
+        working-directory: ./TerraformOnGCP/k8s-argocd-monitoring-with-github-workflow
 
     steps:
       - name: Checkout code
