--- a/.github/workflows/k8s-with-ansible-workflows/k8s-ansible-workflow.yml
+++ b/.github/workflows/k8s-with-ansible-workflows/k8s-ansible-workflow.yml
@@ -1,11 +1,11 @@
 name: Deploy GKE Cluster
 
 on:
-  # push:
-  #   branches:
-  #     - "main"
-  #   paths:
-  #     - 'TerraformOnGCP/k8s-argocd-monitoring-with-ansible/**'
+  push:
+    branches:
+      - "main"
+    paths:
+      - 'TerraformOnGCP/k8s-argocd-monitoring-with-ansible/**'
   workflow_dispatch:
 
 jobs:
