--- a/.github/workflows/k_with_kubectl_apply/destroy-gke-cluster.yml
+++ b/.github/workflows/k_with_kubectl_apply/destroy-gke-cluster.yml
@@ -13,7 +13,7 @@ jobs:
     defaults:
       run:
         shell: bash
-        working-directory: ./TerraformOnGCP/k8s-argocd-monitoring-with-github-workflow  # Set working directory
+        working-directory: ./TerraformOnGCP/k8s-argocd-monitoring-with-github-workflow
 
     steps:
       - name: Checkout code
