--- a/.github/workflows/k8s-ansible-workflow.yml
+++ b/.github/workflows/k8s-ansible-workflow.yml
@@ -2,11 +2,11 @@
 name: k8s cluster & Ansible Controller
 
 on:
-  push:
-    branches:
-      - "main"
-    paths:
-      - 'TerraformOnGCP/k8s-argocd-monitoring-with-ansible/**'
+  # push:
+  #   branches:
+  #     - "main"
+  #   paths:
+  #     - 'TerraformOnGCP/k8s-argocd-monitoring-with-ansible/**'
   workflow_dispatch:
 
 jobs:
@@ -48,10 +48,14 @@ jobs:
         env:
           TF_VAR_gcp_project_id: ${{ secrets.GCP_PROJECT_ID }}
           TF_VAR_gcp_sa_email: ${{ secrets.GCP_SA_EMAIL }}
+          # Add the new variable mapping
+          TF_VAR_target_gke_node_user_email: ${{ secrets.GCP_SA_EMAIL }}
         run: terraform plan -out=tfplan
 
       - name: Terraform Apply
         env:
           TF_VAR_gcp_project_id: ${{ secrets.GCP_PROJECT_ID }}
           TF_VAR_gcp_sa_email: ${{ secrets.GCP_SA_EMAIL }}
+          # Add the new variable mapping
+          TF_VAR_target_gke_node_user_email: ${{ secrets.GCP_SA_EMAIL }}
         run: terraform apply -auto-approve tfplan
