modify destroy (clean up) workflow

--- a/.github/workflows/destroy-k8scluster-ansiblecontroller.yml
+++ b/.github/workflows/destroy-k8scluster-ansiblecontroller.yml
@@ -1,4 +1,4 @@
-name: Destroy GKE Cluster
+name: Destroy all configs (clean up)
 
 on:
   workflow_dispatch:  # Only allow manual triggering for destruction
