start testing oslogin approach to ssh access

--- a/.github/workflows/k8s-ansible-workflow.yml
+++ b/.github/workflows/k8s-ansible-workflow.yml
@@ -2,11 +2,11 @@
 name: k8s cluster & Ansible Controller
 
 on:
-  # push:
-  #   branches:
-  #     - "main"
-  #   paths:
-  #     - 'TerraformOnGCP/k8s-argocd-monitoring-with-ansible/**'
+  push:
+    branches:
+      - "main"
+    paths:
+      - 'TerraformOnGCP/k8s-argocd-monitoring-with-ansible/**'
   workflow_dispatch:
 
 jobs:
