--- a/.github/workflows/k8s-ansible-workflow.yml
+++ b/.github/workflows/k8s-ansible-workflow.yml
@@ -14,7 +14,6 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: 'read'
-      id-token: 'write'
 
     defaults:
       run:
@@ -27,10 +26,9 @@ jobs:
 
       - name: Authenticate to Google Cloud
         id: 'auth'
-        uses: 'google-github-actions/auth@v1'
+        uses: 'google-github-actions/auth@v2' 
         with:
-          credentials_json: ${{ secrets.GCP_ACCESS_KEY }}
-          project_id: ${{ secrets.GCP_PROJECT_ID }}
+          credentials_json: ${{ secrets.GCP_ACCESS_KEY }} 
 
       - name: Set up Google Cloud SDK
         uses: google-github-actions/setup-gcloud@v2
@@ -48,14 +46,14 @@ jobs:
         env:
           TF_VAR_gcp_project_id: ${{ secrets.GCP_PROJECT_ID }}
           TF_VAR_gcp_sa_email: ${{ secrets.GCP_SA_EMAIL }}
-          # Add the new variable mapping
-          TF_VAR_target_gke_node_user_email: ${{ secrets.GCP_SA_EMAIL }}
+          # Correctly map the secret for the target OS Login user email
+          TF_VAR_target_gke_node_user_email: ${{ secrets.GKE_NODE_LOGIN_EMAIL }} 
         run: terraform plan -out=tfplan
 
       - name: Terraform Apply
         env:
           TF_VAR_gcp_project_id: ${{ secrets.GCP_PROJECT_ID }}
           TF_VAR_gcp_sa_email: ${{ secrets.GCP_SA_EMAIL }}
-          # Add the new variable mapping
-          TF_VAR_target_gke_node_user_email: ${{ secrets.GCP_SA_EMAIL }}
+          # Correctly map the secret for the target OS Login user email
+          TF_VAR_target_gke_node_user_email: ${{ secrets.GKE_NODE_LOGIN_EMAIL }}
         run: terraform apply -auto-approve tfplan
