--- a/.github/workflows/k8s-ansible-workflow.yml
+++ b/.github/workflows/k8s-ansible-workflow.yml
@@ -1,59 +1,30 @@
-# Deploy k8s cluster and create a VM dedicated to ansible node controller
-name: k8s cluster & Ansible Controller
+name: K8s Ansible Workflow
 
 on:
   push:
-    branches:
-      - "main"
-    paths:
-      - 'TerraformOnGCP/k8s-argocd-monitoring-with-ansible/**'
+    branches: [ main ]
   workflow_dispatch:
 
 jobs:
-  deploy-infrastructure:
+  deploy:
     runs-on: ubuntu-latest
-    permissions:
-      contents: 'read'
-
-    defaults:
-      run:
-        shell: bash
-        working-directory: ./TerraformOnGCP/k8s-argocd-monitoring-with-ansible
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Authenticate to Google Cloud
-        id: 'auth'
-        uses: 'google-github-actions/auth@v2' 
-        with:
-          credentials_json: ${{ secrets.GCP_ACCESS_KEY }} 
+      - name: Set up GCP credentials
+        run: |
+          echo '${{ secrets.SSH_SA_KEY }}' > /tmp/sa-key.json
+          echo "GOOGLE_CREDENTIALS=$(cat /tmp/sa-key.json)" >> $GITHUB_ENV
+          echo "SSH_SA_EMAIL=${{ secrets.SSH_SA_EMAIL }}" >> $GITHUB_ENV
 
-      - name: Set up Google Cloud SDK
-        uses: google-github-actions/setup-gcloud@v2
-        with:
-          project_id: ${{ secrets.GCP_PROJECT_ID }}          
-
-      - name: Set up Terraform
+      - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
 
-      - name: Initialize Terraform
+      - name: Terraform Init
         run: terraform init
 
-      - name: Terraform Plan
-        id: plan
-        env:
-          TF_VAR_gcp_project_id: ${{ secrets.GCP_PROJECT_ID }}
-          TF_VAR_gcp_sa_email: ${{ secrets.GCP_SA_EMAIL }}
-          # Correctly map the secret for the target OS Login user email
-          TF_VAR_target_gke_node_user_email: ${{ secrets.GKE_NODE_LOGIN_EMAIL }} 
-        run: terraform plan -out=tfplan
-
       - name: Terraform Apply
+        run: terraform apply -auto-approve
         env:
-          TF_VAR_gcp_project_id: ${{ secrets.GCP_PROJECT_ID }}
-          TF_VAR_gcp_sa_email: ${{ secrets.GCP_SA_EMAIL }}
-          # Correctly map the secret for the target OS Login user email
-          TF_VAR_target_gke_node_user_email: ${{ secrets.GKE_NODE_LOGIN_EMAIL }}
-        run: terraform apply -auto-approve tfplan
+          TF_VAR_ssh_sa_email: ${{ secrets.SSH_SA_EMAIL }}
