--- a/.github/workflows/k8s-ansible-workflow.yml
+++ b/.github/workflows/k8s-ansible-workflow.yml
@@ -36,6 +36,12 @@ jobs:
 
       - name: Terraform Init
         run: terraform init
+        
+      - name: Terraform Plan
+        run: terraform plan -out=tfplan
+        id: plan
+        env:
+          TF_VAR_ssh_sa_email: ${{ secrets.SSH_SA_EMAIL }}
 
       - name: Terraform Apply
         run: terraform apply -auto-approve
